--- a/BiStatApp/BiStatApp/BiStatApp.csproj
+++ b/BiStatApp/BiStatApp/BiStatApp.csproj
@@ -13,6 +13,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\Images\BiProne.png" />
+    <None Remove="Assets\Images\BiStand.png" />
+    <None Remove="Assets\Images\target0.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Images\BiProne.png" />
+    <EmbeddedResource Include="Assets\Images\BiStand.png" />
+    <EmbeddedResource Include="Assets\Images\target0.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.8" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1364" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
