--- a/BiStatApp/BiStatApp/BiStatApp.csproj
+++ b/BiStatApp/BiStatApp/BiStatApp.csproj
@@ -21,7 +21,14 @@
     <None Remove="Assets\Images\stargetABC.png" />
     <None Remove="Assets\Images\stargetABCD.png" />
     <None Remove="Assets\Images\stargetABCDE.png" />
+    <None Remove="Assets\Images\stargetABCE.png" />
+    <None Remove="Assets\Images\stargetABDE.png" />
+    <None Remove="Assets\Images\stargetABE.png" />
+    <None Remove="Assets\Images\stargetACDE.png" />
+    <None Remove="Assets\Images\stargetADE.png" />
     <None Remove="Assets\Images\stargetBCDE.png" />
+    <None Remove="Assets\Images\stargetBCE.png" />
+    <None Remove="Assets\Images\stargetBDE.png" />
     <None Remove="Assets\Images\stargetCDE.png" />
     <None Remove="Assets\Images\stargetDE.png" />
     <None Remove="Assets\Images\stargetE.png" />
@@ -30,14 +37,28 @@
     <None Remove="Assets\Images\targetABC.png" />
     <None Remove="Assets\Images\targetABCD.png" />
     <None Remove="Assets\Images\targetABCDE.png" />
+    <None Remove="Assets\Images\targetABCE.png" />
+    <None Remove="Assets\Images\targetABDE.png" />
+    <None Remove="Assets\Images\targetABE.png" />
+    <None Remove="Assets\Images\targetACDE.png" />
+    <None Remove="Assets\Images\targetADE.png" />
     <None Remove="Assets\Images\targetBCDE.png" />
+    <None Remove="Assets\Images\targetBCE.png" />
+    <None Remove="Assets\Images\targetBDE.png" />
     <None Remove="Assets\Images\targetCDE.png" />
     <None Remove="Assets\Images\targetDE.png" />
     <None Remove="Assets\Images\targetE.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Assets\Images\stargetABCE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetABDE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetABE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetACDE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetADE.png" />
     <EmbeddedResource Include="Assets\Images\stargetBCDE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetBCE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetBDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetCDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetE.png" />
@@ -58,7 +79,14 @@
     <EmbeddedResource Include="Assets\Images\targetAB.png" />
     <EmbeddedResource Include="Assets\Images\targetABC.png" />
     <EmbeddedResource Include="Assets\Images\targetABCD.png" />
+    <EmbeddedResource Include="Assets\Images\targetABCE.png" />
+    <EmbeddedResource Include="Assets\Images\targetABDE.png" />
+    <EmbeddedResource Include="Assets\Images\targetABE.png" />
+    <EmbeddedResource Include="Assets\Images\targetACDE.png" />
+    <EmbeddedResource Include="Assets\Images\targetADE.png" />
     <EmbeddedResource Include="Assets\Images\targetBCDE.png" />
+    <EmbeddedResource Include="Assets\Images\targetBCE.png" />
+    <EmbeddedResource Include="Assets\Images\targetBDE.png" />
     <EmbeddedResource Include="Assets\Images\targetCDE.png" />
     <EmbeddedResource Include="Assets\Images\targetDE.png" />
     <EmbeddedResource Include="Assets\Images\targetE.png" />
