Added more target images.

--- a/BiStatApp/BiStatApp/BiStatApp.csproj
+++ b/BiStatApp/BiStatApp/BiStatApp.csproj
@@ -25,11 +25,18 @@
     <None Remove="Assets\Images\stargetABDE.png" />
     <None Remove="Assets\Images\stargetABE.png" />
     <None Remove="Assets\Images\stargetACDE.png" />
+    <None Remove="Assets\Images\stargetACE.png" />
     <None Remove="Assets\Images\stargetADE.png" />
+    <None Remove="Assets\Images\stargetAE.png" />
+    <None Remove="Assets\Images\stargetB.png" />
     <None Remove="Assets\Images\stargetBCDE.png" />
     <None Remove="Assets\Images\stargetBCE.png" />
     <None Remove="Assets\Images\stargetBDE.png" />
+    <None Remove="Assets\Images\stargetBE.png" />
+    <None Remove="Assets\Images\stargetC.png" />
     <None Remove="Assets\Images\stargetCDE.png" />
+    <None Remove="Assets\Images\stargetCE.png" />
+    <None Remove="Assets\Images\stargetD.png" />
     <None Remove="Assets\Images\stargetDE.png" />
     <None Remove="Assets\Images\stargetE.png" />
     <None Remove="Assets\Images\target0.png" />
@@ -41,11 +48,18 @@
     <None Remove="Assets\Images\targetABDE.png" />
     <None Remove="Assets\Images\targetABE.png" />
     <None Remove="Assets\Images\targetACDE.png" />
+    <None Remove="Assets\Images\targetACE.png" />
     <None Remove="Assets\Images\targetADE.png" />
+    <None Remove="Assets\Images\targetAE.png" />
+    <None Remove="Assets\Images\targetB.png" />
     <None Remove="Assets\Images\targetBCDE.png" />
     <None Remove="Assets\Images\targetBCE.png" />
     <None Remove="Assets\Images\targetBDE.png" />
+    <None Remove="Assets\Images\targetBE.png" />
+    <None Remove="Assets\Images\targetC.png" />
     <None Remove="Assets\Images\targetCDE.png" />
+    <None Remove="Assets\Images\targetCE.png" />
+    <None Remove="Assets\Images\targetD.png" />
     <None Remove="Assets\Images\targetDE.png" />
     <None Remove="Assets\Images\targetE.png" />
   </ItemGroup>
@@ -55,11 +69,18 @@
     <EmbeddedResource Include="Assets\Images\stargetABDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetABE.png" />
     <EmbeddedResource Include="Assets\Images\stargetACDE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetACE.png" />
     <EmbeddedResource Include="Assets\Images\stargetADE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetAE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetB.png" />
     <EmbeddedResource Include="Assets\Images\stargetBCDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetBCE.png" />
     <EmbeddedResource Include="Assets\Images\stargetBDE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetBE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetC.png" />
     <EmbeddedResource Include="Assets\Images\stargetCDE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetCE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetD.png" />
     <EmbeddedResource Include="Assets\Images\stargetDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetE.png" />
     <EmbeddedResource Include="Assets\Images\targetABCDE.png" />
@@ -83,11 +104,18 @@
     <EmbeddedResource Include="Assets\Images\targetABDE.png" />
     <EmbeddedResource Include="Assets\Images\targetABE.png" />
     <EmbeddedResource Include="Assets\Images\targetACDE.png" />
+    <EmbeddedResource Include="Assets\Images\targetACE.png" />
     <EmbeddedResource Include="Assets\Images\targetADE.png" />
+    <EmbeddedResource Include="Assets\Images\targetAE.png" />
+    <EmbeddedResource Include="Assets\Images\targetB.png" />
     <EmbeddedResource Include="Assets\Images\targetBCDE.png" />
     <EmbeddedResource Include="Assets\Images\targetBCE.png" />
     <EmbeddedResource Include="Assets\Images\targetBDE.png" />
+    <EmbeddedResource Include="Assets\Images\targetBE.png" />
+    <EmbeddedResource Include="Assets\Images\targetC.png" />
     <EmbeddedResource Include="Assets\Images\targetCDE.png" />
+    <EmbeddedResource Include="Assets\Images\targetCE.png" />
+    <EmbeddedResource Include="Assets\Images\targetD.png" />
     <EmbeddedResource Include="Assets\Images\targetDE.png" />
     <EmbeddedResource Include="Assets\Images\targetE.png" />
   </ItemGroup>
