--- a/BiStatApp/BiStatApp/BiStatApp.csproj
+++ b/BiStatApp/BiStatApp/BiStatApp.csproj
@@ -29,6 +29,7 @@
     <None Remove="Assets\Images\stargetADE.png" />
     <None Remove="Assets\Images\stargetAE.png" />
     <None Remove="Assets\Images\stargetB.png" />
+    <None Remove="Assets\Images\stargetBCD.png" />
     <None Remove="Assets\Images\stargetBCDE.png" />
     <None Remove="Assets\Images\stargetBCE.png" />
     <None Remove="Assets\Images\stargetBDE.png" />
@@ -52,6 +53,7 @@
     <None Remove="Assets\Images\targetADE.png" />
     <None Remove="Assets\Images\targetAE.png" />
     <None Remove="Assets\Images\targetB.png" />
+    <None Remove="Assets\Images\targetBCD.png" />
     <None Remove="Assets\Images\targetBCDE.png" />
     <None Remove="Assets\Images\targetBCE.png" />
     <None Remove="Assets\Images\targetBDE.png" />
@@ -73,6 +75,7 @@
     <EmbeddedResource Include="Assets\Images\stargetADE.png" />
     <EmbeddedResource Include="Assets\Images\stargetAE.png" />
     <EmbeddedResource Include="Assets\Images\stargetB.png" />
+    <EmbeddedResource Include="Assets\Images\stargetBCD.png" />
     <EmbeddedResource Include="Assets\Images\stargetBCDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetBCE.png" />
     <EmbeddedResource Include="Assets\Images\stargetBDE.png" />
@@ -108,6 +111,7 @@
     <EmbeddedResource Include="Assets\Images\targetADE.png" />
     <EmbeddedResource Include="Assets\Images\targetAE.png" />
     <EmbeddedResource Include="Assets\Images\targetB.png" />
+    <EmbeddedResource Include="Assets\Images\targetBCD.png" />
     <EmbeddedResource Include="Assets\Images\targetBCDE.png" />
     <EmbeddedResource Include="Assets\Images\targetBCE.png" />
     <EmbeddedResource Include="Assets\Images\targetBDE.png" />
