--- a/BiStatApp/BiStatApp/BiStatApp.csproj
+++ b/BiStatApp/BiStatApp/BiStatApp.csproj
@@ -161,6 +161,9 @@
     <EmbeddedResource Update="Views\PracticesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ReportPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\SendSessionPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
