--- a/BiStatApp/BiStatApp/BiStatApp.csproj
+++ b/BiStatApp/BiStatApp/BiStatApp.csproj
@@ -73,6 +73,7 @@
     <None Remove="Assets\Images\targetDE.png" />
     <None Remove="Assets\Images\targetE.png" />
     <None Remove="Assets\Images\todo.png" />
+    <None Remove="Assets\Images\xamarin_logo.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -140,6 +141,7 @@
     <EmbeddedResource Include="Assets\Images\targetDE.png" />
     <EmbeddedResource Include="Assets\Images\targetE.png" />
     <EmbeddedResource Include="Assets\Images\todo.png" />
+    <EmbeddedResource Include="Assets\Images\xamarin_logo.png" />
   </ItemGroup>
 
   <ItemGroup>
