--- a/BiStatApp/BiStatApp/BiStatApp.csproj
+++ b/BiStatApp/BiStatApp/BiStatApp.csproj
@@ -4,7 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
     <Authors>James McAvoy</Authors>
-    <Company>ThetaStream</Company>
+    <Company>ThetaStream.com</Company>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Copyright>Copyright ©  2020, ThetaStream.com, Inc. All rights reserved.</Copyright>
+    <Product>Biathlon Shooting Stats</Product>
+    <Version>0.1.0</Version>
+    <Description>Track your Biathlon shooting results.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
