Added more target images.

--- a/BiStatApp/BiStatApp/BiStatApp.csproj
+++ b/BiStatApp/BiStatApp/BiStatApp.csproj
@@ -32,15 +32,19 @@
     <None Remove="Assets\Images\stargetABD.png" />
     <None Remove="Assets\Images\stargetABDE.png" />
     <None Remove="Assets\Images\stargetABE.png" />
+    <None Remove="Assets\Images\stargetAC.png" />
     <None Remove="Assets\Images\stargetACD.png" />
     <None Remove="Assets\Images\stargetACDE.png" />
     <None Remove="Assets\Images\stargetACE.png" />
+    <None Remove="Assets\Images\stargetAD.png" />
     <None Remove="Assets\Images\stargetADE.png" />
     <None Remove="Assets\Images\stargetAE.png" />
     <None Remove="Assets\Images\stargetB.png" />
+    <None Remove="Assets\Images\stargetBC.png" />
     <None Remove="Assets\Images\stargetBCD.png" />
     <None Remove="Assets\Images\stargetBCDE.png" />
     <None Remove="Assets\Images\stargetBCE.png" />
+    <None Remove="Assets\Images\stargetBD.png" />
     <None Remove="Assets\Images\stargetBDE.png" />
     <None Remove="Assets\Images\stargetBE.png" />
     <None Remove="Assets\Images\stargetC.png" />
@@ -60,15 +64,19 @@
     <None Remove="Assets\Images\targetABD.png" />
     <None Remove="Assets\Images\targetABDE.png" />
     <None Remove="Assets\Images\targetABE.png" />
+    <None Remove="Assets\Images\targetAC.png" />
     <None Remove="Assets\Images\targetACD.png" />
     <None Remove="Assets\Images\targetACDE.png" />
     <None Remove="Assets\Images\targetACE.png" />
+    <None Remove="Assets\Images\targetAD.png" />
     <None Remove="Assets\Images\targetADE.png" />
     <None Remove="Assets\Images\targetAE.png" />
     <None Remove="Assets\Images\targetB.png" />
+    <None Remove="Assets\Images\targetBC.png" />
     <None Remove="Assets\Images\targetBCD.png" />
     <None Remove="Assets\Images\targetBCDE.png" />
     <None Remove="Assets\Images\targetBCE.png" />
+    <None Remove="Assets\Images\targetBD.png" />
     <None Remove="Assets\Images\targetBDE.png" />
     <None Remove="Assets\Images\targetBE.png" />
     <None Remove="Assets\Images\targetC.png" />
@@ -88,15 +96,19 @@
     <EmbeddedResource Include="Assets\Images\stargetABD.png" />
     <EmbeddedResource Include="Assets\Images\stargetABDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetABE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetAC.png" />
     <EmbeddedResource Include="Assets\Images\stargetACD.png" />
     <EmbeddedResource Include="Assets\Images\stargetACDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetACE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetAD.png" />
     <EmbeddedResource Include="Assets\Images\stargetADE.png" />
     <EmbeddedResource Include="Assets\Images\stargetAE.png" />
     <EmbeddedResource Include="Assets\Images\stargetB.png" />
+    <EmbeddedResource Include="Assets\Images\stargetBC.png" />
     <EmbeddedResource Include="Assets\Images\stargetBCD.png" />
     <EmbeddedResource Include="Assets\Images\stargetBCDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetBCE.png" />
+    <EmbeddedResource Include="Assets\Images\stargetBD.png" />
     <EmbeddedResource Include="Assets\Images\stargetBDE.png" />
     <EmbeddedResource Include="Assets\Images\stargetBE.png" />
     <EmbeddedResource Include="Assets\Images\stargetC.png" />
@@ -128,15 +140,19 @@
     <EmbeddedResource Include="Assets\Images\targetABD.png" />
     <EmbeddedResource Include="Assets\Images\targetABDE.png" />
     <EmbeddedResource Include="Assets\Images\targetABE.png" />
+    <EmbeddedResource Include="Assets\Images\targetAC.png" />
     <EmbeddedResource Include="Assets\Images\targetACD.png" />
     <EmbeddedResource Include="Assets\Images\targetACDE.png" />
     <EmbeddedResource Include="Assets\Images\targetACE.png" />
+    <EmbeddedResource Include="Assets\Images\targetAD.png" />
     <EmbeddedResource Include="Assets\Images\targetADE.png" />
     <EmbeddedResource Include="Assets\Images\targetAE.png" />
     <EmbeddedResource Include="Assets\Images\targetB.png" />
+    <EmbeddedResource Include="Assets\Images\targetBC.png" />
     <EmbeddedResource Include="Assets\Images\targetBCD.png" />
     <EmbeddedResource Include="Assets\Images\targetBCDE.png" />
     <EmbeddedResource Include="Assets\Images\targetBCE.png" />
+    <EmbeddedResource Include="Assets\Images\targetBD.png" />
     <EmbeddedResource Include="Assets\Images\targetBDE.png" />
     <EmbeddedResource Include="Assets\Images\targetBE.png" />
     <EmbeddedResource Include="Assets\Images\targetC.png" />
