--- a/BiStatApp/BiStatApp.Android/BiStatApp.Android.csproj
+++ b/BiStatApp/BiStatApp.Android/BiStatApp.Android.csproj
@@ -105,5 +105,8 @@
       <Name>BiStatApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\values\strings.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
