--- a/BiStatApp/BiStatApp.iOS/Info.plist
+++ b/BiStatApp/BiStatApp.iOS/Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Biathlon Shooting Stats</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.thetastream.BiStatApp</string>
+	<string>com.thetastream.bistatapp</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
