--- a/BiStatApp/BiStatApp.UWP/BiStatApp.UWP.csproj
+++ b/BiStatApp/BiStatApp.UWP/BiStatApp.UWP.csproj
@@ -157,6 +157,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
       <Version>3.1.9</Version>
     </PackageReference>
+    <PackageReference Include="Plugin.Toast">
+      <Version>2.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.1180" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.10" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
