--- a/BiStatApp/BiStatApp.Android/BiStatApp.Android.csproj
+++ b/BiStatApp/BiStatApp.Android/BiStatApp.Android.csproj
@@ -69,7 +69,7 @@
       <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre2" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
