--- a/BiStatApp/BiStatApp.UWP/BiStatApp.UWP.csproj
+++ b/BiStatApp/BiStatApp.UWP/BiStatApp.UWP.csproj
@@ -100,6 +100,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FileHelperImpl.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -162,7 +163,7 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.6.0.1180" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.10" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BiStatApp\BiStatApp.csproj">
