--- a/BiStatApp/BiStatApp/BiStatApp.csproj
+++ b/BiStatApp/BiStatApp/BiStatApp.csproj
@@ -177,7 +177,7 @@
     <PackageReference Include="Plugin.Toast" Version="2.2.0" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.6.2" />
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.6.0-pre2" />
   </ItemGroup> 
 
   <ItemGroup>
