--- a/BiStatApp/BiStatApp.Android/BiStatApp.Android.csproj
+++ b/BiStatApp/BiStatApp.Android/BiStatApp.Android.csproj
@@ -114,4 +114,9 @@
     <AndroidResource Include="Resources\values\strings.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties TriggeredFromHotReload="False" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
